--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
        "set"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,10 +1061,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unique_travel_cities = list(unique_travel_cities)"
@@ -1072,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1079,7 @@
        "list"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,28 +1097,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
+       "['Iguazu Falls',\n",
        " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
-       " 'Greenville',\n",
-       " 'Albuquerque',\n",
+       " 'Pyeongchang',\n",
        " 'Salina Island',\n",
        " 'Walla Walla Valley',\n",
        " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Solta',\n",
+       " 'Greenville',\n",
+       " 'Archipelago Sea',\n",
+       " 'Buenos Aires',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Toronto']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
